# esp-rpc

./: .gitignore  CMakeLists.txt  Kconfig  README.md  TODO  idf_component.yml  rpc_macros.h  rpc_macros.hpp
generator/: __init__.py  binary_protocol.py  c_emitter.py  main.py  parser.py  requirements.txt  ts_binary_emitter.py  ts_emitter.py
include/: esprpc.h  esprpc_binary.h  esprpc_service.h  esprpc_transport.h
projects/esp_test/: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  sdkconfig.defaults
projects/esp_test/main/: CMakeLists.txt  main.c  main.cpp  rpc_types.ts  transport-ws.ts  user_service.rpc.c  user_service.rpc.dispatch.h  user_service.rpc.gen.cpp  user_service.rpc.gen.hpp  user_service.rpc.h  user_service.rpc.hpp  user_service.rpc.impl.c  user_service.rpc.impl.h  user_service.rpc.impl_user.c  user_service.rpc.impl_user.cpp  wifi_config_local.h.example  wifi_sta.c  wifi_sta.cpp  wifi_sta.h  wifi_sta.hpp
projects/preact-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
projects/preact-app/src/: app.css  app.tsx  performance-test.ts
projects/ts_test/: README.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: esprpc.c  esprpc_binary.c  transport_ble.c  transport_http_ws.c  transport_serial.c
ts/: package.json  tsconfig.json
ts/src/: index.ts
